fix: count menu bar height on mobile (#81)

--- a/src/global.css
+++ b/src/global.css
@@ -1,10 +1,4 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  overflow-y: hidden;
-}
-
-#root {
-  height: 100%;
 }
